[package]
name = "libiio-sys"
version = "0.3.1"
edition = "2018"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
repository = "https://github.com/fpagliughi/rust-industrial-io"
homepage = "https://github.com/fpagliughi/rust-industrial-io"
description = "Native, unsafe, bindings to the Linux libiio library. Used by industrial-io."
license = "MIT"
links = "iio"
build = "build.rs"
keywords = ["linux", "embedded", "analog", "iio"]
categories = ["embedded", "hardware-support", "os", "os::unix-apis"]

[dependencies]

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.88"
cmake = "0.1.50"
pkg-config = "0.3.30"
